# evaluer

./: .env.compose  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  weights.yaml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 627c17e201b3_add_parent_id_to_grades.py  d7cee5c1be2c_add_unique_constraint_to_response_grades.py
config/: weights.yaml
data/: student_grades.json
docs/hive/: core.yaml
evaluer/: app.py  main.py
evaluer/api/: app.py
evaluer/api/dependencies/: grades.py  grading.py  hive.py  weights.py
evaluer/api/routers/: __init__.py  course.py  grades.py  modules.py  students.py  subjects.py
evaluer/api/schemas/: grades.py
evaluer/cli/: app.py  generator.py
evaluer/clients/: base.py  hive.py
evaluer/common/: settings.py
evaluer/common/clients/: base.py  hive.py
evaluer/common/database/: __init__.py  models.py  session.py
evaluer/common/models/: hive.py
evaluer/common/repositories/: grading.py
evaluer/common/services/: calculator.py  grades.py  weights.py
evaluer/core/: models.py  settings.py
evaluer/core/database/: models.py
evaluer/core/models/: api.py
evaluer/database/: session.py
evaluer/dependencies/: cache.py  grading.py  hive.py
evaluer/models/: api.py  hive.py
evaluer/repositories/: __init__.py  grading.py
evaluer/routers/: __init__.py  modules.py  students.py  subjects.py
evaluer/services/: cache.py  grading.py  hive.py
