[tool.poetry]
name = "evaluer"
version = "2.0.0"
description = "Modern grade management system for Hive LMS following SOLID principles"
authors = ["idandaniel <idandaniel12@gmail.com>"]
readme = "README.md"
packages = [{include = "evaluer"}]

[tool.poetry.scripts]
evaluer = "evaluer.main:main"
evaluer-api = "evaluer.api.app:app"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"
requests = "^2.32.4"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = "^5.0.1"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
mypy = "^1.7.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
